    for compatibility with rockchip platforms.
  * [arm64, armhf] Update SD-card-images sizes for netboot, netboot-gtk and hd-media.

  [ Samuel Thibault ]
  * On hurd-i386, mips, and powerpc, add debian-ports-archive-keyring-udeb also
    in the monolithic images for bootstraping from debian-ports' unreleased.
  * Update minimum disk and memory sizes.

 -- Shawn Guo <shawn.guo@linaro.org>  Sat, 12 Dec 2020 12:11:26 +0000

debian-installer (20201202) unstable; urgency=medium

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI to 5.9.0-4
  * Drop fontconfig tweaks introduced in version 20170828 (See: #873462):
     - Full hinting support was removed upstream, in pango 1.44.
     - Forcing truetype:interpreter-version=35 through FREETYPE_PROPERTIES
       now leads to arguably worse rendering than with default settings.
  * With or without the aforementioned changes, the rendering looks much
    worse than it used to (until Debian Installer Bullseye Alpha 3), due
    to a behavioral change in pango. Since it affects default fonts, and
    not only in the installer's context, one might have hoped for a fix
    at some point but that doesn't seem to be happening. We might try to
    use different fonts to try and dodge this issue… Until then, here
    are some pointers to bugtracker entries:
     - https://bugs.debian.org/956612
     - https://gitlab.gnome.org/GNOME/pango/-/issues/404
     - https://github.com/harfbuzz/harfbuzz/issues/1892
  * Convert doc/devel/anna-install.txt to UTF-8.
  * Clean whitespaces in doc/i18n/ChangeLog, making it UTF-8.
  * Update translation-status for the release.

  [ Vagrant Cascadian ]
  * Update Firefly-RK3288 image for new u-boot version.
  * [arm64] Add support for firefly-rk3399, pinebook-pro-rk3399,
    rockpro64-rk3399, rock64-rk3328 and rock-pi-4-rk3399 to u-boot images
    and netboot SD card images.
  * [arm64] Make all netboot sdcard images start at offset 32768, for
    compatibility with rockchip platforms.
